# gp-data-ni

./: README.md
.github/workflows/: webscraper-ci.yml  webscraper-publish.yml
apps/webscraper/: README.rst  pyproject.toml
apps/webscraper/tests/: test_webscraper.py
apps/webscraper/webscraper/: webscraper.py
