[tool.poetry]
name = "webscraper"
version = "0.2.2"
description = ""
authors = ["Paul Fegan <pfegan415@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

